@@ -27,3 +27,11 @@ Then(/^I should be able to wait for the answer "([^"]*)"$/) do |answer|
   @page.wait_for_ajax
   expect(@page.results).to eql answer
 end
+
+Given(/^I execute the javascript "([^"]*)"$/) do |script|
+  @answer = @page.execute_script script
+end
+
+Then(/^I should get the answer "([^"]*)"$/) do |answer|
+  expect(@answer).to eql answer.to_i
+end
